fixed spacing and shredding issues.

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -9,7 +9,7 @@
         display: flex;
         justify-content: center;
         align-content: center;
-        top: 170px;
+        top: 4%;
     }
 
     &-container {
@@ -24,7 +24,7 @@
     &-content {
         margin-left: 5%;
         margin-right: 5%;
-        background-color: #240046;
+        background-color: #10002B;
         height: 100%;
         width: 90%;
         position: relative;
@@ -33,7 +33,6 @@
     &-content-container {
         width: 100%;
         height: 200px;
-        background-color: gray;
         overflow: hidden;
 
     }
@@ -52,7 +51,7 @@
 
     &-slider {
         &-container {
-            background-color:#240046;
+            background-color:#10002B;
             width: 100%;
             height: 100%;
             &-videos {
@@ -79,7 +78,7 @@
         &-canvas {
             height: 100%;
             width: 100%;
-            background-color: red;
+            background-color: #10002B;
             z-index:  -1;
             position: absolute;
         }
@@ -90,8 +89,6 @@
             position: absolute;
             z-index: 4;
             top: 100px;
-           // margin-left: 65%;
-           // margin-top: 6.5%;
             border: 5px solid #7B2CBF;
             // -webkit-animation: fadein 0.5s ease-in alternate 1;
             // -moz-animation: fadein 0.5s ease-in alternate 1;
@@ -144,7 +141,10 @@
             height: 50px;
             width:  150px;
             position: relative;
-            top: 120px;
+            margin-top: 7%;
+            //margin-bottom: 1%;
+            margin-left: 17%;
+            //top: 120px;
             //left: 150px;
             padding-bottom: 5px;
             padding-top: 5px;
