--- a/src/app/components/projectile/projectile.component.scss
+++ b/src/app/components/projectile/projectile.component.scss
@@ -29,13 +29,13 @@
         justify-content: flex-start;
         position: absolute;
         width: 100%;
-        background-color: grey;
+        background-color: #cacaca;
         color: #fff;
         font-size: large;
         font-weight: 900;
         top: 100%;
         height: 100%;
-        transition: top 0.5s ease-in-out;
+        transition: top 0.2s ease-in-out;
     }
 
     &-descactive {
@@ -43,7 +43,7 @@
     }
 
     &:hover {
-        opacity: 0.85;
+        //opacity: 0.85;
         cursor: pointer;
 
     }
